working on animation styling

--- a/index.html
+++ b/index.html
@@ -5,48 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Математика с Инной</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<header class="header">
-    <a href="https://t.me/kondrashova_inna"><h1 style="color: #479adf">Математика с Инной</h1></a>
-    <nav class="navigation">
-        <a href="#home">
-            <div><h2>Главная</h2></div>
-        </a>
-        <a href="#about">
-            <div><h2>Обо мне</h2></div>
-        </a>
-        <a href="#exams">
-            <div><h2>ЕГЭ и ДВИ</h2></div>
-        </a>
-        <a href="#pupils">
-            <div><h2>Мои ученики</h2></div>
-        </a>
-        <a href="#contact">
-            <div><h2>Контакты</h2></div>
-        </a>
-    </nav>
-
-</header>
 <main>
-    <article class="hero" id="home">
+    <article class="home" id="home">
         <h1>Подготовка к ЕГЭ и ДВИ с опытным репетитором</h1>
 
-        <section class="home">
+        <section class="home__info" id="home-info">
             <div>
             <p>Индивидуальные занятия по математике для достижения высоких результатов</p>
 
             <button>Записаться на пробный урок</button>
             </div>
 
-            <aside>
-                <img src="inna_copy.jpg" alt="Фотография репетитора">
-            </aside>
         </section>
     </article>
 
     <article class="section" id="about">
-        <img src="path/to/your/profile-photo.jpg" alt="[Ваше Имя]">
+        <img src="path/to/your/profile-photo.jpg" alt="Репетитор Инна">
         <h2>Обо мне</h2>
         <p>Привет! Меня зовут [Ваше Имя], и я опытный репетитор по математике. Я помогаю ученикам успешно сдавать ЕГЭ и
             ДВИ, а также улучшать свои знания и навыки в математике. У меня более [количество лет] лет опыта
@@ -94,5 +71,7 @@
 <footer>
     <p>© 2025 [Ваше Имя]. Все права защищены.</p>
 </footer>
+
+<script type="text/javascript" src='./scripts.js'></script>
 </body>
 </html>
